[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/objects/IgnisRegularInner/IgnisRegularInner.tscn" type="PackedScene" id=1]
[ext_resource path="res://resource/ui/windows/background.png" type="Texture" id=2]
[ext_resource path="res://resource/ui/yazata.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://src/ui/gameOverWindow/WindowGameOver.gd" type="Script" id=4]
[ext_resource path="res://resource/sounds/clicks/2.wav" type="AudioStream" id=5]
[ext_resource path="res://resource/sounds/situation/gameover1.wav" type="AudioStream" id=6]
[ext_resource path="res://resource/sounds/situation/gameover.wav" type="AudioStream" id=7]
[ext_resource path="res://resource/sounds/situation/gameover2.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 110
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 3 )

[node name="WindowGameOver" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
light_mask = 2
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
light_mask = 2
margin_right = 1280.0
margin_bottom = 720.0

[node name="Sprite" type="Sprite" parent="MarginContainer/CenterContainer"]
light_mask = 2
position = Vector2( 640, 360 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer"]
light_mask = 2
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="Sprite" type="Sprite" parent="MarginContainer/CenterContainer/CenterContainer"]
light_mask = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/CenterContainer/Sprite"]
light_mask = 2
margin_left = -150.0
margin_top = -130.0
margin_right = 150.0
margin_bottom = -36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "you died"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="MarginContainer/CenterContainer/CenterContainer/Sprite"]
light_mask = 2
margin_left = -118.0
margin_top = -30.0
margin_right = 118.0
margin_bottom = 44.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Restart"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResLight" parent="MarginContainer/CenterContainer/CenterContainer/Sprite/Restart" instance=ExtResource( 1 )]
visible = false
position = Vector2( -30, 30 )
scale = Vector2( 1, 1 )

[node name="MainMenu" type="Button" parent="MarginContainer/CenterContainer/CenterContainer/Sprite"]
light_mask = 2
margin_left = -183.0
margin_top = 50.0
margin_right = 183.0
margin_bottom = 124.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "exit to menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuLight" parent="MarginContainer/CenterContainer/CenterContainer/Sprite/MainMenu" instance=ExtResource( 1 )]
visible = false
position = Vector2( -30, 30 )
scale = Vector2( 1, 1 )

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="music3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/CenterContainer/Sprite/Restart" to="." method="_on_Restart_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/CenterContainer/CenterContainer/Sprite/Restart" to="." method="_on_Restart_mouse_exited"]
[connection signal="pressed" from="MarginContainer/CenterContainer/CenterContainer/Sprite/Restart" to="." method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/CenterContainer/Sprite/MainMenu" to="." method="_on_MainMenu_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/CenterContainer/CenterContainer/Sprite/MainMenu" to="." method="_on_MainMenu_mouse_exited"]
[connection signal="pressed" from="MarginContainer/CenterContainer/CenterContainer/Sprite/MainMenu" to="." method="_on_MainMenu_pressed"]
